<resources>
    <string name="app_name">SmartHome</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_routines">Routines</string>
    <string name="title_cameras">Cameras</string>
    <string name="apply_routine">Routine applied!</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>

    <string name="ActionFail">Error, could not apply the change!</string>

    <string name="Blinds">Blinds</string>
    <string name="UpDown">Up/Down</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="SuccessBlindsDown">Success! Blind is now Down.</string>
    <string name="SuccessBlindsUp">Success! Blind is now Up.</string>

    <string name="Ac">Air Conditioner</string>
    <string name="OnOff" translatable="false">On/Off</string>
    <string name="On" translatable="false">On</string>
    <string name="Off" translatable="false">Off</string>
    <string name="Temperature">Temperature</string>
    <string name="VerticalSwing">Vertical swing</string>
    <string name="HorizontalSwing">Horizontal swing</string>
    <string name="FanSpeed">Fan speed</string>
    <string name="AcMode">Mode</string>
    <string name="Cool">Cool</string>
    <string name="Heat">Heat</string>
    <string name="Fan">Fan</string>
    <string name="VSwingSuccess">Success! Vertical Swing has changed.</string>
    <string name="HSwingSuccess">Success! Horizontal Swing has changed.</string>
    <string name="FanSpeedSuccess">Success! Fan Speed has changed.</string>
    <string name="AcModeSuccess">Success! Ac Mode has changed.</string>

    <string name="SuccessMsgOnOff">Success! Device is now </string>
    <string name="OnM">On</string>
    <string name="OffM">Off</string>
    <string name="SuccessMsgTemp">Success! Temperature has changed.</string>

    <string name="Door">Door</string>
    <string name="OpenClose">Open the door</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Lock">Lock</string>
    <string name="Unlock">Unlock</string>
    <string name="LockUnlock">Lock the Door</string>
    <string name="SuccessMsgDoor">Success! The door is now </string>
    <string name="OpenMsg">Open.</string>
    <string name="CloseMsg">Closed.</string>
    <string name="LockMsg">Locked.</string>
    <string name="UnlockMsg">Unlocked.</string>


    <string name="Lamp">Lamp</string>
    <string name="Brightness">Brightness</string>
    <string name="ColorPicker">Color Picker</string>
    <string name="SuccessMsgBright">Success! Brightness has successfully changed.</string>
    <string name="SuccessMsgCol">Success! The lamp color has successfully changed.</string>

    <string name="Oven">Oven</string>
    <string name="Eco" translatable="false">Eco</string>
    <string name="Normal">Normal</string>
    <string name="Large">Large</string>
    <string name="ConvectionMode">Convection mode</string>
    <string name="Bottom">Bottom</string>
    <string name="Top">Top</string>
    <string name="Conventional">Conventional</string>
    <string name="HeatMode">Heat mode</string>
    <string name="GrillMode">Grill Mode</string>

    <string name="SuccessCMode">Success! Convection mode has successfully changed.</string>
    <string name="SuccessGMode">Success! Grill mode has successfully changed.</string>
    <string name="SuccessHMode">Success! Heat mode has successfully changed.</string>


    <string name="Refrigerator">Refrigerator</string>
    <string name="FreezerTemperature">Freezer temperature</string>
    <string name="Party">Party</string>
    <string name="Vacations">Vacations</string>
    <string name="SuccessFMode">Success! Fridge mode has successfully changed.</string>
    <string name="Default">Default</string>

    <string name="Timer">Timer</string>
    <string name="enterMinutes">Minutes!</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="timer" translatable="false">00:00:00</string>
    <string name="Set">Set</string>
    <string name="TimerFinished">Timer finished!</string>
    <string name="SetDone">Success! The time has changed.</string>

    <string name="Alarm">Alarm</string>
    <string name="ColumnsAmount">Columns amount</string>

    <string name="ColumnsAmountPotrait">Columns amount (Portrait mode)</string>

    <string name="ColumnsAmountLandscape">Columns amount (Landscape mode)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_dark_theme">Dark theme (Unfinished, needs restart)</string>

    <!-- Strings related to Settings -->


    <string-array name="columns_amount_potrait">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="columns_amount_landscape">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="ConvectionMode">
        <item>@string/Normal</item>
        <item>@string/Eco</item>
        <item>@string/Off</item>
    </string-array>

    <string-array name="ConvectionMode2">
        <item>normal</item>
        <item>eco</item>
        <item>off</item>
    </string-array>

    <string-array name="GrillMode">
        <item>@string/Large</item>
        <item>@string/Eco</item>
        <item>@string/Off</item>
    </string-array>

    <string-array name="GrillMode2">
        <item>large</item>
        <item>eco</item>
        <item>off</item>
    </string-array>

    <string-array name="HeatMode">
        <item>@string/Conventional</item>
        <item>@string/Bottom</item>
        <item>@string/Top</item>
    </string-array>

    <string-array name="HeatMode2">
        <item>conventional</item>
        <item>bottom</item>
        <item>top</item>
    </string-array>

    <string name="title_favourites">Favourites</string>
    <string name="title_device">Device screen</string>
    <string name="title_activity_device">Device activity</string>
    <string-array name="VSwing">
        <item>auto</item>
        <item>22</item>
        <item>45</item>
        <item>67</item>
        <item>90</item>
    </string-array>

    <string-array name="HSwing">
        <item>auto</item>
        <item>-90</item>
        <item>-45</item>
        <item>0</item>
        <item>45</item>
        <item>90</item>
    </string-array>

    <string-array name="FanSpeed">
        <item>auto</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>

    <string-array name="AcMode">
        <item>@string/Cool</item>
        <item>@string/Heat</item>
        <item>@string/Fan</item>
    </string-array>

    <string-array name="AcMode2">
        <item>cool</item>
        <item>heat</item>
        <item>fan</item>
    </string-array>

    <string-array name="ArrayInterval">
        <item>@string/Short</item>
        <item>@string/Medium</item>
        <item>@string/Long</item>
    </string-array>

    <string name="Short">1 min</string>
    <string name="Medium">30 min</string>
    <string name="Long">60 min</string>
    <string name="Interval">Notification interval (Restart Required)</string>

    <string name="error_request">Error getting the JSON Request</string>
    <string name="activate_dev_not">Activate Device Notifications</string>

    <string-array name="FridgeMode">
        <item>@string/Default</item>
        <item>@string/Party</item>
        <item>@string/Vacations</item>
    </string-array>

    <string-array name="FridgeMode2">
        <item>default</item>
        <item>party</item>
        <item>vacation</item>
    </string-array>

    <string name="ChangeMessage">A device has been changed!</string>
    <string name="empty_room">This room is empty!</string>
    <string name="no_rooms_available">There are no rooms yet!</string>
    <string name="no_rooms_error">The rooms could not be loaded because there are some connection issues, check your connection and try again.</string>
    <string name="no_favorites_available">There are no favourite devices, access your most used devices to add them to your favourites!</string>
    <string name="connection_error">There are some connection issues, check your connection and swipe down to refresh.</string>
    <string name="apply_routine_error">The routine could not be applied because there are some connection issues, check your connection and try again.</string>
    <string name="no_routines_error">The routines could not be loaded because there are some connection issues, check your connection and try again.</string>
    <string name="no_routines_available">There are no routines yet!</string>
    <string name="loading">Loading</string>
    <string name="device_not_exist">There was a connection error or this devices does not exist anymore. Please swipe to refresh.</string>
    <string name="about_us">About us</string>
    <string name="about_us_message">We are a team composed by:\n      - Facundo Astiz\n      - Pedro Pingarilho\n      - Miguel Di Luca\n      - Pedro Vedoya\n \n </string>

</resources>
